# drsclient

./: .pre-commit-config.yaml  .secrets.baseline  .travis.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yaml  pypi.yml  wool.yml
drsclient/: __init__.py  client.py
tests/: conftest.py  test_drsclient.py
