[tool.poetry]
name = "drsclient"
version = "0.1.0"
description = "DCFS DRS Client"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
httpx = "^0.12.1"
asyncio = "^3.4.3"
backoff = "^1.10.0"
uuid = "^1.30"
jsonschema = "2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test.git", rev = "1.0.0"}
hsclient = {git = "https://github.com/uc-cdis/hsclient.git", rev = "1.0.0"}
dosclient = {git = "https://github.com/uc-cdis/dosclient.git", rev = "1.1.0"}
doiclient = {git = "https://github.com/uc-cdis/doiclient.git", rev = "1.0.0"}
indexd = {git = "https://github.com/uc-cdis/indexd.git", rev = "2.13.0"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
