[tool.poetry]
name = "drsclient"
version = "0.2.0"
description = "GA4GH DRS Client"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
requests = "^2.23.0"
httpx = "^0.15"
asyncio = "^3.4.3"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cdisutilstest = {git = "https://github.com/uc-cdis/cdisutils-test.git", rev = "1.0.0"}
indexd = {git = "https://github.com/uc-cdis/indexd.git", rev = "3.4.0"}
respx = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
